[package]
name = "bereal-data-transform"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
clap = { version = "4.5.11", features = ["derive"] }
image = "0.25.2"
img-parts = "0.3.3"
itertools = "0.13.0"
little_exif = "0.6.11"
num_cpus = "1.16.0"
regex = "1.10.5"
serde ={ version ="1.0.204", features = ["derive"] }
serde_json = "1.0.120"
unic-ucd-name = "0.9.0"
